tests/diagnostics/negative/module_resolution/two_file_import_cycle.vit
space tests/diagnostics/negative/module_resolution/two_file_import_cycle

use tests/diagnostics/negative_support/import_cycle_entry as entry

proc main() -> int {
  give entry.entry()
}
